finished skills ... starting on work

--- a/css/index.css
+++ b/css/index.css
@@ -162,6 +162,9 @@ body {
   font-size: 62.5%;
   background-color: aliceblue;
 }
+i {
+  font-size: 2rem;
+}
 header {
   background-color: #00FFFF;
   height: 20vh;
@@ -182,14 +185,14 @@ header nav a {
   text-decoration: none;
   justify-content: space-between;
   color: #9370DB;
-  font-size: 1rem;
+  font-size: 2rem;
 }
 header nav .navClass:hover {
   color: #FF1493;
-  font-size: 2rem;
+  font-size: 3rem;
 }
 header .name {
-  font-size: 2rem;
+  font-size: 3rem;
   font-family: 'Parisienne', cursive;
   padding-bottom: 2%;
   margin: 1%;
@@ -206,14 +209,14 @@ header .name {
   border-bottom: 1px dashed black;
 }
 .main-content .intro h1 {
-  font-size: 1rem;
+  font-size: 2rem;
   margin: 0 4%;
   border-bottom: 1px dashed black;
 }
 .main-content .intro p {
   margin: 1%;
   padding: 1% 2%;
-  font-size: 0.8rem;
+  font-size: 1.5rem;
 }
 .main-content .intro mark {
   background-color: aliceblue;
@@ -227,7 +230,7 @@ header .name {
 }
 .main-content .intro .luckButton {
   margin-bottom: 1%;
-  font-size: 0.8rem;
+  font-size: 1rem;
   background-color: purple;
   color: white;
   border-radius: 12px;
@@ -236,4 +239,34 @@ header .name {
 .main-content .intro .luckButton:hover {
   background-color: orange;
   color: teal;
+}
+.main-content .skills {
+  margin: 0 1%;
+  width: 100%;
+}
+.main-content .skills h2 {
+  font-size: 2rem;
+  text-align: center;
+  padding: 1% 0;
+}
+.main-content .skills .container1 {
+  display: flex;
+  font-size: 1rem;
+}
+.main-content .skills .container1 div {
+  margin: 1%;
+  padding: 3%;
+}
+.main-content .skills .container1 h3 {
+  font-size: 2rem;
+  text-align: center;
+}
+.main-content .skills .container1 p {
+  font-size: 1.3rem;
+  padding: 3%;
+  margin: 0 5%;
+  text-align: center;
+}
+.main-content .work {
+  border: 1px solid red;
 }
