completed work ... starting on contact

--- a/less/index.less
+++ b/less/index.less
@@ -87,6 +87,7 @@ i {
 // header 
 header { //header opening
 	background-color: @header-color;
+	margin: 1%;
 	height: 20vh;
 	width: 100%;
 	padding: 3%;
@@ -131,12 +132,13 @@ header { //header opening
 	.intro{ // intro opening
 		margin: 1%;
 		text-align: center;
-		border-bottom: 1px dashed black;
+		border: 1px dashed black;
+		margin-bottom: 1%;
+		width: 100%;
 		
 		h1{ // name opening
 			font-size: 2rem;
-			margin: 0 4%;
-			border-bottom: 1px dashed black;
+			margin: 2% 4%;
 		} // name closing
 
 		p{ // para opening
@@ -169,8 +171,9 @@ header { //header opening
 	} // intro closing
 
 	.skills{ // skills opening
-		margin: 0 1%;
+		margin: 1%;
 		width: 100%;
+		border: 1px dashed black;
 
 		h2{
 			font-size: 2rem;
@@ -202,6 +205,35 @@ header { //header opening
 	} // skills closing
 
 	.work{ //work opening
-		border: 1px solid red;
+		margin: 1%;
+		width: 100%;
+		border: 1px dashed black;
+		h2{
+			font-size: 2rem;
+			text-align: center;
+			padding: 1% 0;
+		}
+		.container2{ // container2 opening
+			width: 75%;
+			margin: 0 10%;
+
+			h3{
+			font-size:2rem;
+			}
+
+			h4{
+				font-size:1.2rem;
+			}
+
+			p{
+				font-size: 1.4rem;
+				padding: 1%;
+			}
+		} //container2 closing
 	} //work closing
+	.contact{
+		margin: 1%;
+		width: 100%;
+		border: 1px dashed black;
+	}
 } //main content closing
