--- a/css/index.css
+++ b/css/index.css
@@ -167,6 +167,7 @@ i {
 }
 header {
   background-color: #00FFFF;
+  margin: 1%;
   height: 20vh;
   width: 100%;
   padding: 3%;
@@ -206,12 +207,13 @@ header .name {
 .main-content .intro {
   margin: 1%;
   text-align: center;
-  border-bottom: 1px dashed black;
+  border: 1px dashed black;
+  margin-bottom: 1%;
+  width: 100%;
 }
 .main-content .intro h1 {
   font-size: 2rem;
-  margin: 0 4%;
-  border-bottom: 1px dashed black;
+  margin: 2% 4%;
 }
 .main-content .intro p {
   margin: 1%;
@@ -241,8 +243,9 @@ header .name {
   color: teal;
 }
 .main-content .skills {
-  margin: 0 1%;
+  margin: 1%;
   width: 100%;
+  border: 1px dashed black;
 }
 .main-content .skills h2 {
   font-size: 2rem;
@@ -268,5 +271,31 @@ header .name {
   text-align: center;
 }
 .main-content .work {
-  border: 1px solid red;
+  margin: 1%;
+  width: 100%;
+  border: 1px dashed black;
+}
+.main-content .work h2 {
+  font-size: 2rem;
+  text-align: center;
+  padding: 1% 0;
+}
+.main-content .work .container2 {
+  width: 75%;
+  margin: 0 10%;
+}
+.main-content .work .container2 h3 {
+  font-size: 2rem;
+}
+.main-content .work .container2 h4 {
+  font-size: 1.2rem;
+}
+.main-content .work .container2 p {
+  font-size: 1.4rem;
+  padding: 1%;
+}
+.main-content .contact {
+  margin: 1%;
+  width: 100%;
+  border: 1px dashed black;
 }
