--- a/css/index.css
+++ b/css/index.css
@@ -160,7 +160,7 @@ body {
   font-family: 'Handlee', cursive;
   margin: 2%;
   font-size: 62.5%;
-  background-color: aliceblue;
+  background-color: #B0C4DE;
 }
 i {
   font-size: 2rem;
@@ -221,7 +221,7 @@ header .name {
   font-size: 1.5rem;
 }
 .main-content .intro mark {
-  background-color: aliceblue;
+  background-color: #B0C4DE;
   color: #FF8C00;
   font-weight: bold;
 }
@@ -268,6 +268,8 @@ header .name {
   font-size: 1.3rem;
   padding: 3%;
   margin: 0 5%;
+  display: flex;
+  justify-content: center;
   text-align: center;
 }
 .main-content .work {
@@ -298,4 +300,77 @@ header .name {
   margin: 1%;
   width: 100%;
   border: 1px dashed black;
+  padding: 3% 10%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+}
+.main-content .contact h2 {
+  font-size: 2rem;
+  margin-bottom: 1%;
+}
+.main-content .contact h3 {
+  font-size: 1.5rem;
+  margin-bottom: 1%;
+  padding-bottom: 2%;
+}
+.main-content .contact .click {
+  text-align: center;
+  margin: 2% 1%;
+  padding: 1%;
+  background-color: limegreen;
+  color: yellow;
+  flex-direction: row-reverse;
+  border-radius: 40%;
+  font-size: 1rem;
+  font-style: bold;
+}
+.main-content .contact h6 {
+  padding-top: 5%;
+}
+.footer {
+  width: 100%;
+  height: 3vh;
+  margin: 1%;
+}
+.footer h6 {
+  font-size: 1rem;
+  text-align: center;
+  color: black;
+}
+@media (max-width: 500px) {
+  header .name {
+    display: none;
+  }
+  header nav {
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .intro {
+    padding: 2% 0;
+  }
+  .skills {
+    padding: 2% 0;
+  }
+  .work {
+    text-align: center;
+    padding: 2% 0;
+  }
+  .contact {
+    text-align: center;
+  }
+  .contact h3 {
+    margin: 1%;
+    padding: 1%;
+  }
+  .contact small {
+    display: none;
+  }
+  .contact .click {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    text-decoration: none;
+  }
 }
